newclay/test/Compiler/StaticEvaluator/Fail/InSymbolHeadEvaluation1/main.clay
import __primitives__.*;

define Foo[..'x] as staticError("I AM ERROR.", ..'x);

#Main() = staticSymbolBody(Foo[2]);
